add interval delivery function

--- a/vnyi.VnInvoice/vnyi.VnInvoice.csproj
+++ b/vnyi.VnInvoice/vnyi.VnInvoice.csproj
@@ -47,20 +47,34 @@
     <Compile Include="Enums\PaymentMethodType.cs" />
     <Compile Include="Enums\VatPercentType.cs" />
     <Compile Include="Models\Authentication.cs" />
-    <Compile Include="Models\DataModel\InvoiceAdjustmentHeaderModel.cs" />
+    <Compile Include="Models\DataModel\InternalDeliveryCreateModel.cs" />
+    <Compile Include="Models\DataModel\InternalDeliveryDeleteModel.cs" />
+    <Compile Include="Models\DataModel\InternalDeliverySignModel.cs" />
+    <Compile Include="Models\DataModel\InternalDeliveryUpdateModel.cs" />
+    <Compile Include="Models\DataModel\InvoiceAdjustmentModel.cs" />
+    <Compile Include="Models\DataModel\InvoiceAdjusementHeaderModel.cs" />
     <Compile Include="Models\DataModel\InvoiceApproveAndSignModel.cs" />
     <Compile Include="Models\DataModel\InvoiceCancelModel.cs" />
     <Compile Include="Models\DataModel\InvoiceDeleteModel.cs" />
     <Compile Include="Models\DataModel\InvoiceReplaceModel.cs" />
     <Compile Include="Models\DataModel\InvoiceUpdateModel.cs" />
-    <Compile Include="Models\Request\InvoiceAdjustmentHeaderRequest.cs" />
+    <Compile Include="Models\Request\InternalDeliveryCreateRequest.cs" />
+    <Compile Include="Models\Request\InternalDeliveryDeleteRequest.cs" />
+    <Compile Include="Models\Request\InternalDeliveryUpdateRequest.cs" />
+    <Compile Include="Models\Request\InvoiceAdjusementHeaderRequest.cs" />
+    <Compile Include="Models\Request\InvoiceAdjustmentRequest.cs" />
     <Compile Include="Models\Request\InvoiceCancelRequest.cs" />
     <Compile Include="Models\Request\InvoiceDeleteRequest.cs" />
     <Compile Include="Models\Request\InvoiceReplaceRequest.cs" />
     <Compile Include="Models\Response\BaseResponse.cs" />
     <Compile Include="Models\DataModel\InvoiceCreateModel.cs" />
     <Compile Include="Models\Request\InvoiceCreateRequest.cs" />
-    <Compile Include="Models\Response\InvoiceAdjustmentHeaderResponse.cs" />
+    <Compile Include="Models\Response\InternalDeliveryDeleteResponse.cs" />
+    <Compile Include="Models\Response\InternalDeliveryCreateResponse.cs" />
+    <Compile Include="Models\Response\InternalDeliverySignResponse.cs" />
+    <Compile Include="Models\Response\InternalDeliveryUpdateResponse.cs" />
+    <Compile Include="Models\Response\InvoiceAdjusementHeaderResponse.cs" />
+    <Compile Include="Models\Response\InvoiceAdjustmentResponse.cs" />
     <Compile Include="Models\Response\InvoiceApproveAndSignResponse.cs" />
     <Compile Include="Models\Response\InvoiceCancelResponse.cs" />
     <Compile Include="Models\Response\InvoiceCreateResponse.cs" />
